--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,6 @@
-# dependencies
+.DS_Store
 node_modules
-
-# logs
-npm-debug.log
-yarn-error.log
-
-# other
-.nuxt
-dist
-.vscode
-.idea
-newrelic_agent.log
-.DS_STORE
-.eslintrc
-
-# docs
-/docs
-
-# @nuxtjs/pwa
-sw.*
-
+/build
+/.svelte-kit
+/package
 .env
-
-# Optional eslint cache
-.eslintcache
-
-.vercel
