--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "devDependencies": {
     "@sveltejs/adapter-vercel": "^1.0.0-next.31",
     "@sveltejs/kit": "next",
+    "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "svelte": "^3.42.6"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "yeonna-core": "github:yeonna-dev/yeonna-core"
+  }
 }
