--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yeonna-web",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev",
+    "dev": "svelte-kit dev --port 9999",
     "build": "svelte-kit build",
     "preview": "svelte-kit preview",
     "lint": "eslint --ignore-path .gitignore ."
@@ -10,10 +10,21 @@
   "devDependencies": {
     "@sveltejs/adapter-vercel": "^1.0.0-next.31",
     "@sveltejs/kit": "next",
+    "autoprefixer": "^10.3.7",
+    "axios": "^0.24.0",
+    "cssnano": "^5.0.8",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-svelte3": "^3.2.1",
-    "svelte": "^3.42.6"
+    "link-preview-js": "^2.1.8",
+    "postcss": "^8.3.9",
+    "postcss-load-config": "^3.1.0",
+    "sass": "^1.43.4",
+    "shave": "^2.5.10",
+    "svelte": "^3.42.6",
+    "svelte-preprocess": "^4.9.8",
+    "tailwindcss": "^2.2.16",
+    "vite-plugin-autoimport": "^1.4.2"
   },
   "type": "module",
   "dependencies": {
