--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "devDependencies": {
     "@sveltejs/adapter-vercel": "^1.0.0-next.31",
     "@sveltejs/kit": "next",
+    "@tailwindcss/forms": "^0.3.4",
     "autoprefixer": "^10.3.7",
     "axios": "^0.24.0",
+    "classnames": "^2.3.1",
     "cssnano": "^5.0.8",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
